--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 logging.config=classpath:logback.xml
+server.servlet.session.timeout=60m
 
 #spring.datasource.url=jdbc:h2:file:~/assistant/database;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE;AUTO_SERVER=true
 spring.h2.console.settings.web-allow-others=true
