--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.h2.console.settings.web-allow-others=true
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-#spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
+spring.jpa.show-sql=false
+spring.jpa.show_sql=false
